lang.java.statics.test/tests/positive/classes/nested/pathequality2.yes.javtest
STATIX ok
JAVAC  ok

[A]
class A {
    class B {}
}

[C]
class C extends A {
    class D extends B {
        A.B m() {
            return this;
        }
    }
}
