lang.java.statics.test/tests/negative/locals/classdeclsinblockoutoforder.no.javtest
STATIX fail java\.names\.lexical-type-name.*\"B\"
JAVAC  fail cannot find symbol

[Test]
class A {
    public void m() {
        class C extends B {}
        class B {}
    }
}

